Corrected mobile nav z-index

--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -39,7 +39,7 @@
     float: left;
     width: 1.125em;
     height: .875em;
-    margin: .04em 0 0 .438em
+    margin: .2em 0 0 .438em
 }
 
 .slicknav_menu .slicknav_icon:before {
@@ -109,6 +109,7 @@
     text-align: center;
     width: 100%;
     position: absolute;
+    z-index: 9999;
 }
 
 .slicknav_nav,
